# Sciebo-Install

./: .gitignore  README.md  config.yaml.example  install.sh  pyproject.toml  readme.md  requirements.txt
sciebo_rds_cli/: main.py
sciebo_rds_install/: main.py
src/: main.py
